--- a/mod3/eval2/index.html
+++ b/mod3/eval2/index.html
@@ -25,7 +25,7 @@ Integrantes:
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark transparent">
         <!--Logo y marca de la tienda-->
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand d-flex align-items-center" href="index.html">
             <img src="img/logo.png" class="rounded mr-3" width="90" height="60">
             <h1 id="titulo" class="navbar-text text-wrap m-0 p-0 w-100">Lavado de Autos Los Eren</h1>
         </a>
