--- a/mod3/eval2/orden-trabajo.html
+++ b/mod3/eval2/orden-trabajo.html
@@ -26,7 +26,7 @@ Integrantes:
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark transparent">
         <!--Logo y marca de la tienda-->
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand d-flex align-items-center" href="index.html">
             <img src="img/logo.png" class="rounded mr-3" width="90" height="60">
             <h1 id="titulo" class="navbar-text text-wrap m-0 p-0 w-100">Lavado de Autos Los Eren</h1>
         </a>
@@ -82,7 +82,6 @@ Integrantes:
                                 <div class="invalid-feedback"></div>
                             </div>
                         </div> -->
-
                         <!-- Rut (dv separado) -->
                         <div class="form-group form-row">
                             <label class="col-sm-2 col-form-label" for="rut">Rut:</label>
@@ -95,13 +94,11 @@ Integrantes:
                                 <label class="col-form-label text-center mx-1" for="dv">-</label>
                                 <div class="dv">
                                     <input type="text" id="dv" name="dv"
-                                        class="form-control text-center px-0 validar-cliente validar-dv" value="g">
+                                        class="form-control text-center validar-cliente validar-dv" value="g">
                                     <div class="invalid-feedback text-nowrap"></div>
                                 </div>
                             </div>
-
                         </div>
-
                         <!--Nombre-->
                         <div class="form-group form-row">
                             <label class="col-sm-2 col-form-label" for="nombre">Nombre:</label>
