--- a/mod3/act11/index.html
+++ b/mod3/act11/index.html
@@ -10,43 +10,44 @@
 </head>
 
 <body>
-    <div id="calculadora" class="container rounded shadow-lg bg-secondary mt-2 pb-2">
+
+    <div id="calculadora" class="rounded bg-secondary">
+
         <h2 class="text-light">KACIO</h2>
-        <div id="pantalla" class="bg-light rounded mb-2 px-1">
-            <div id="operador" class="text-right"></div>
-            <div id="salida" class="text-right font-weight-bold">0</div>
+
+        <div id="pantalla" class="bg-light rounded">
+            <div id="operador" class="operador"></div>
+            <div id="salida" class="salida">0</div>
         </div>
-        <div class="form-inline my-1">
-            <button type="button" class="btn btn-danger">CE</button>
-            <button type="button" class="btn btn-danger">C</button>
-            <button type="button" class="btn btn-dark">%</button>
-            <button type="button" class="btn btn-dark">/</button>
-        </div>
-        <div class="form-inline my-1">
-            <button type="button" class="btn btn-dark">7</button>
-            <button type="button" class="btn btn-dark">8</button>
-            <button type="button" class="btn btn-dark">9</button>
-            <button type="button" class="btn btn-dark">*</button>
-        </div>
-        <div class="form-inline my-1">
-            <button type="button" class="btn btn-dark">4</button>
-            <button type="button" class="btn btn-dark">5</button>
-            <button type="button" class="btn btn-dark">6</button>
-            <button type="button" class="btn btn-dark">-</button>
-        </div>
-        <div class="form-inline my-1">
-            <button type="button" class="btn btn-dark">1</button>
-            <button type="button" class="btn btn-dark">2</button>
-            <button type="button" class="btn btn-dark">3</button>
-            <button type="button" class="btn btn-dark">+</button>
-        </div>
-        <div class="form-inline my-1">
-            <button type="button" class="btn btn-dark">+/-</button>
-            <button type="button" class="btn btn-dark">0</button>
-            <button type="button" class="btn btn-dark">.</button>
-            <button type="button" class="btn btn-dark">=</button>
-        </div>
+
+        <button type="button" class="btn btn-danger">CE</button>
+        <button type="button" class="btn btn-danger">C</button>
+        <button type="button" class="btn btn-dark">%</button>
+        <button type="button" class="btn btn-dark">/</button>
+
+        <button type="button" class="btn btn-dark">7</button>
+        <button type="button" class="btn btn-dark">8</button>
+        <button type="button" class="btn btn-dark">9</button>
+        <button type="button" class="btn btn-dark">*</button>
+
+        <button type="button" class="btn btn-dark">4</button>
+        <button type="button" class="btn btn-dark">5</button>
+        <button type="button" class="btn btn-dark">6</button>
+        <button type="button" class="btn btn-dark">-</button>
+
+        <button type="button" class="btn btn-dark">1</button>
+        <button type="button" class="btn btn-dark">2</button>
+        <button type="button" class="btn btn-dark">3</button>
+        <button type="button" class="btn btn-dark">+</button>
+
+        <button type="button" class="btn btn-dark">+/-</button>
+        <button type="button" class="btn btn-dark">0</button>
+        <button type="button" class="btn btn-dark">.</button>
+        <button type="button" class="btn btn-dark">=</button>
+
     </div>
+
+
 
     <script src="js/app.js"></script>
 
